# iserFinal

./: .lastload  CMakeLists.txt  timeline  todo
cmake/: simulation.cmake
data/: gains-02.txt  gains-04.txt  gains-06.txt
data/experiments/08-placeLever/: llwa-state
data/experiments/09-push/: fts  fts2
data/lever-fulcrum/: gains-03.txt  gains-09.txt  point.config  viewing.config
data/lever-fulcrum/experiments/08-placeLever/: dynamixel-state  rlwa-state  waist-state
data/lever-fulcrum/experiments/09-push/: fuck.m
doc/: bla.m  mydata
doc/bias_exps/: bla.m  exp1  exp2  exp3  exp4  exp5  exp6  exp7  exp8  exp9
doc/paper/: .abstract.tex.kate-swp  abstract.aux  abstract.bbl  abstract.blg  abstract.tex  abstract.tex~  paper.aux  paper.bbl  paper.blg  paper.tex  paper.tex.backup  paper.tex~  paper.toc  references.bib  references.bib.backup  references.bib~
exe/: 04-pushCinder.cpp  05-standUp.cpp  06-moveCinder.cpp  07-pickLever.cpp  08-placeLever.cpp  10-navigateLever.cpp  main.cpp  planning.cpp
exe/lever-fulcrum/: 01-locateCinder.cpp  02-navigateCinder.cpp  03-approachCinder-shorten.cpp  03-approachCinder.cpp  05-prepareBrickStand.cpp  09-push.cpp  11-putCinder.cpp
scripts/: getData.sh
src/: controllers.h  helpers.h  locomotion.cpp  locomotion.h  manipulation.cpp  manipulation.h  perception.cpp  perception.h  simTab.h  vision.cpp
src/factors/: basic.h  common.h  display.h  geometry.cpp  geometry.h  ik.cpp  ik.h  kinematics.cpp  kinematics.h  lever.cpp  lever.h  motion.cpp  motion.h  ramp.cpp  ramp.h  simTab.h
src/lever-fulcrum/: bla.c  controllers.cpp  vision.h
tests/: 00-visualize.cpp  01-grasp.cpp  02-navigate.cpp
